winit, dearimgui prelim testing

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,8 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
+winit = "0.30.10"
+pixels = "0.15.0"
+wgpu = "25.0.0"
+image = "0.25.6"
+# ash = "0.38.0+1.3.281"
