--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,6 @@ edition = "2024"
 winit = "0.30.10"
 pixels = "0.15.0"
 wgpu = "25.0.0"
+nalgebra = "0.33.2"
 image = "0.25.6"
 # ash = "0.38.0+1.3.281"
